<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/menu_margin_top"
    android:nestedScrollingEnabled="false"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <!-- Все задачи -->
        <LinearLayout
            android:id="@+id/menu_all_task"
            android:layout_width="match_parent"
            android:layout_height="@dimen/menu_main_item_height"
            android:background="@drawable/sidebar_item"
            android:onClick="menuItemClick"
            android:orientation="horizontal"
            android:paddingEnd="@dimen/menu_right_space"
            android:paddingStart="@dimen/menu_left_space">

            <ImageView
                android:layout_width="@dimen/menu_icon_size"
                android:layout_height="@dimen/menu_icon_size"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/menu_space_after_icon"
                android:src="@drawable/ic_event_black_24dp"
                android:tint="@color/gray_6"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:text="@string/menu_all_tasks"
                android:textColor="@color/gray_9"
                android:textSize="@dimen/menu_item_text_size"/>

            <TextView
                android:id="@+id/menu_all_tasks_counter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:fontFamily="sans-serif-medium"
                android:textSize="14sp"/>

        </LinearLayout>


        <!-- Входящие -->
        <LinearLayout
            android:id="@+id/menu_tasks_income"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/sidebar_item"
            android:onClick="menuItemClick"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/menu_sub_item_padding_bottom"
            android:paddingEnd="@dimen/menu_right_space"
            android:paddingStart="@dimen/menu_left_space"
            android:paddingTop="@dimen/menu_sub_item_padding_top">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/menu_sub_item_margin_start"
                android:layout_weight="1"
                android:fontFamily="sans-serif"
                android:text="@string/menu_income_tasks"
                android:textSize="@dimen/menu_sub_item_text_size"/>

            <TextView
                android:id="@+id/menu_tasks_income_counter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:fontFamily="sans-serif"
                android:textSize="@dimen/menu_sub_item_text_size"/>
        </LinearLayout>


        <!-- На сегодня -->
        <LinearLayout
            android:id="@+id/menu_tasks_today"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/sidebar_item"
            android:onClick="menuItemClick"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/menu_sub_item_padding_bottom"
            android:paddingEnd="@dimen/menu_right_space"
            android:paddingStart="@dimen/menu_left_space"
            android:paddingTop="@dimen/menu_sub_item_padding_top">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/menu_sub_item_margin_start"
                android:layout_weight="1"
                android:fontFamily="sans-serif"
                android:text="@string/menu_today_tasks"
                android:textSize="@dimen/menu_sub_item_text_size"/>

            <TextView
                android:id="@+id/menu_tasks_today_counter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:fontFamily="sans-serif"
                android:textSize="@dimen/menu_sub_item_text_size"/>
        </LinearLayout>


        <!-- На неделю -->
        <LinearLayout
            android:id="@+id/menu_tasks_week"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/sidebar_item"
            android:onClick="menuItemClick"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/menu_sub_item_padding_bottom"
            android:paddingEnd="@dimen/menu_right_space"
            android:paddingStart="@dimen/menu_left_space"
            android:paddingTop="@dimen/menu_sub_item_padding_top">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/menu_sub_item_margin_start"
                android:layout_weight="1"
                android:fontFamily="sans-serif"
                android:text="@string/menu_week_tasks"
                android:textSize="@dimen/menu_sub_item_text_size"/>

            <TextView
                android:id="@+id/menu_tasks_week_counter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:fontFamily="sans-serif"
                android:textSize="@dimen/menu_sub_item_text_size"/>
        </LinearLayout>


        <!-- На месяц -->
        <LinearLayout
            android:id="@+id/menu_tasks_month"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/sidebar_item"
            android:onClick="menuItemClick"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/menu_sub_item_padding_bottom"
            android:paddingEnd="@dimen/menu_right_space"
            android:paddingStart="@dimen/menu_left_space"
            android:paddingTop="@dimen/menu_sub_item_padding_top">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/menu_sub_item_margin_start"
                android:layout_weight="1"
                android:fontFamily="sans-serif"
                android:text="@string/menu_month_tasks"
                android:textSize="@dimen/menu_sub_item_text_size"/>

            <TextView
                android:id="@+id/menu_tasks_month_counter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:fontFamily="sans-serif"
                android:textSize="@dimen/menu_sub_item_text_size"/>
        </LinearLayout>


        <!-- Завершенные -->
        <LinearLayout
            android:id="@+id/menu_tasks_finished"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/sidebar_item"
            android:onClick="menuItemClick"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/menu_sub_item_padding_bottom"
            android:paddingEnd="@dimen/menu_right_space"
            android:paddingStart="@dimen/menu_left_space"
            android:paddingTop="@dimen/menu_sub_item_padding_top">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/menu_sub_item_margin_start"
                android:fontFamily="sans-serif"
                android:text="@string/menu_finished_tasks"
                android:textSize="@dimen/menu_sub_item_text_size"/>
        </LinearLayout>


        <!-- Группы -->
        <LinearLayout
            android:id="@+id/menu_group"
            android:layout_width="match_parent"
            android:layout_height="@dimen/menu_main_item_height"
            android:background="@drawable/sidebar_item"
            android:onClick="menuItemClick"
            android:orientation="horizontal"
            android:paddingEnd="@dimen/menu_right_space"
            android:paddingStart="@dimen/menu_left_space">

            <ImageView
                android:layout_width="@dimen/menu_icon_size"
                android:layout_height="@dimen/menu_icon_size"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/menu_space_after_icon"
                android:src="@drawable/ic_dns_black_24dp"
                android:tint="@color/gray_6"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:fontFamily="sans-serif-medium"
                android:text="@string/menu_groups"
                android:textColor="@color/gray_9"
                android:textSize="@dimen/menu_item_text_size"/>
        </LinearLayout>


        <!-- Список групп -->
        <android.support.v7.widget.RecyclerView
            android:id="@+id/menu_group_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <!-- Разделитель
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="13dp"
            android:background="@color/gray_3"/>  -->


        <!-- Заголовок раздела
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/menu_main_item_height"
            android:layout_gravity="center_vertical"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_vertical"
            android:paddingEnd="@dimen/menu_right_space"
            android:paddingStart="@dimen/menu_left_space"
            android:text="@string/menu_title_other"
            android:textColor="@color/gray_6"
            android:textSize="@dimen/menu_item_text_size"/> -->


        <!-- Настройки
        <LinearLayout
            android:id="@+id/menu_setting"
            android:layout_width="match_parent"
            android:layout_height="@dimen/menu_main_item_height"
            android:background="@drawable/sidebar_item"
            android:onClick="menuItemClick"
            android:orientation="horizontal"
            android:paddingEnd="@dimen/menu_right_space"
            android:paddingStart="@dimen/menu_left_space">

            <ImageView
                android:layout_width="@dimen/menu_icon_size"
                android:layout_height="@dimen/menu_icon_size"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/menu_space_after_icon"
                android:src="@drawable/ic_settings_black_24dp"
                android:tint="@color/gray_6"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:fontFamily="sans-serif-medium"
                android:text="@string/menu_settings"
                android:textColor="@color/gray_9"
                android:textSize="@dimen/menu_item_text_size"/>
        </LinearLayout>  -->


        <!-- Оценить приложение!
        <LinearLayout
            android:id="@+id/menu_review"
            android:layout_width="match_parent"
            android:layout_height="@dimen/menu_main_item_height"
            android:background="@drawable/sidebar_item"
            android:onClick="menuItemClick"
            android:orientation="horizontal"
            android:paddingEnd="@dimen/menu_right_space"
            android:paddingStart="@dimen/menu_left_space">

            <ImageView
                android:layout_width="@dimen/menu_icon_size"
                android:layout_height="@dimen/menu_icon_size"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/menu_space_after_icon"
                android:src="@drawable/ic_star_black_24dp"
                android:tint="@color/gray_6"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:fontFamily="sans-serif-medium"
                android:text="@string/menu_review"
                android:textColor="@color/gray_9"
                android:textSize="@dimen/menu_item_text_size"/>
        </LinearLayout> -->
    </LinearLayout>
</ScrollView>